# RSStodon

./: CMakeLists.txt  README.md
src/: feed.cpp  feed.hpp  main.c  main.cpp  rss.c  rss.cpp  rss.h  rss.hpp
